# bisondrywall.io

./: .dockerignore  .gitignore  Dockerfile  README.md  bisondrywall_io.opam  bun.lockb  dune  dune-project  fly.toml  index.html  next.config.js  package.json  pnpm-lock.yaml  rescript.json  tailwind.config.cjs  tailwind.config.js  tailwind.config.mjs  vercel.json  vite.config.ts
lib/: dune
lib/components/: callout.ml  dune  footer.ml  offer_cards.ml  offer_cards.mli  photos_marquee.ml  testomonials.ml
lib/views/: dune  index.ml  index.mli  privacy.ml
pages/: _document.tsx  examples.js  index.js  index.tsx  privacy.js  privacy.tsx  terms.tsx
public/: photos.json
src/: App.res  App.res.mjs  Env.res  Examples.res  Examples.res.mjs  Home.res  Home.res.mjs  Index.res  Index.res.mjs  Privacy.res  Privacy.res.mjs  build.ts  index.css  index.html  input.css  main.ts  output.css  privacy.html  style.css
src/components/: AdminJobModal.svelte  AdminPhotoModal.svelte  Callout.res  Callout.res.mjs  Callout.tsx  Container.svelte  Footer.tsx  Icon.res  Icon.res.mjs  Icon.resi  Nav.svelte  Notification.svelte  OfferCards.res  OfferCards.res.mjs  OfferCards.tsx  PhotosMarquee.res  PhotosMarquee.res.mjs  PhotosMarquee.resi  PhotosMarquee.tsx  Testomonial.svelte  Testomonials.res  Testomonials.res.mjs  Testomonials.tsx
src/data/: delete.ts  offerings.tsx  testomonials.ts
src/layouts/: MainLayout.res  MainLayout.res.mjs
src/lib/: db.ts
src/routes/: __error.svelte  __layout.svelte  about.svelte  admin.svelte  (+6 more)
styles/: global.css  globals.css  main.css
test/: dune
(+21 files in other folders)
